--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
 
     <title>Frontend Mentor | NFT preview card component</title>
@@ -17,10 +17,10 @@
   <body>
     <main class="card">
       <div class="image">
-        <img src="./images/image-equilibrium.jpg" alt="ETH image" />
+        <img src="./image-equilibrium.jpg" alt="ETH image" />
 
         <div class="overlay">
-          <img src="./images/icon-view.svg" alt="eye icon" />
+          <img src="./icon-view.svg" alt="eye icon" />
         </div>
       </div>
 
@@ -29,15 +29,15 @@
 
       <ul>
         <li>
-          <img src="./images/icon-ethereum.svg" alt="ETH icon" />0.041 ETH
+          <img src="./icon-ethereum.svg" alt="ETH icon" />0.041 ETH
         </li>
 
         <li>
-          <img src="./images/icon-clock.svg" alt="clock icon" />3 days left
+          <img src="./icon-clock.svg" alt="clock icon" />3 days left
         </li>
       </ul>
       <div class="auther">
-        <img src="./images/image-avatar.png" alt="avatar" />Creation of
+        <img src="./image-avatar.png" alt="avatar" />Creation of
         <span>Jules Wyvern</span>
       </div>
     </main>
